--- a/config.yml
+++ b/config.yml
@@ -4,3 +4,13 @@ server:
 
 nats:
   url: "nats://localhost:4222"
+  timeout: 10
+  reconnectWait: 5
+  maxReconnects: -1
+  messageTimeout: 30
+
+websocket:
+  readBufferSize: 1024
+  writeBufferSize: 1024
+  pingInterval: 30
+  readTimeout: 60
